# abc-model

./: .buildinfo  .gitignore  .gitlab-ci.yml  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  searchindex.js  verify_stability.py
.doctrees/: environment.pickle  index.doctree
.github/workflows/: docs.yml
_docs/: conf.py
_modules/abcmodel/: abstracts.html  integration.html  utils.html
_sources/: index.rst
data/: dataset.h5  generate.py  generated_dataset.h5
docs/: .buildinfo  .buildinfo.bak  README.md  conf.py  genindex.html  index.html  index.rst  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle
docs/_modules/: index.html
docs/_sources/: index.rst
docs/_templates/: package.rst.jinja
examples/: runmodel.py
examples/clouds/: cumulus.py  no_clouds.py
examples/core/: ags.py  aquacrop.py  diagnostics.py  eval_simple_pytree.py  jarvis-stewart.py  minimal.py
examples/hybrid/: analytical.py  cc_frac.py  offline.py  psi.py  utils.py
examples/land_surface/: aquacrop.py  jarvis_stewart.py  minimal.py
examples/mixed_layer/: bulk.py  minimal.py
examples/others/: bluesky.py  indirect-effects.py  minmix.py  minsurf.py  simplesurf.py
examples/radiation/: constant.py  standard.py
examples/surface_layer/: minimal.py  standard.py
examples/tutorials/: hybrid_clouds.py  switch_models.py
lib/abcmodel/: abstracts.py  coupling.py  utils.py
source/api/: abcconfigs.aridities.arid.html  abcconfigs.aridities.html  abcconfigs.aridities.humid.html  abcconfigs.aridities.standard.html  (+21 more)
(+546 files in other folders)
