[project]
name = "abcmodel"
version = "0.1.0"
description = "A simple differentiable model coupling biosphere and atmosphere."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax",
 "matplotlib",
 "simple-pytree",
 "h5py",
 "tqdm",
 "flax",
 "equinox>=0.13.4",
]

[docs]
dependencies = ["sphinx", "sphinx-book-theme", "sphinx-autodoc-typehints"]

[tool.ruff.lint]
ignore = ["E731", "F722"]
